[project]
name = "gpu-kernel-study"
version = "0.1.0"
description = "CUDA & Triton kernel study"
requires-python = ">=3.11,<3.14"
dependencies = [
    "torch==2.7.0",
    "numpy>=1.24.0",
]

[project.optional-dependencies]
triton = [
    "triton>=3.0.0,<4.0.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"
ignore = ["E731"]  # Allow lambda assignments (common in Triton)
